updates experience and projects and includes volunteer work

--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
                       <img src="https://res.cloudinary.com/idmcalculus/image/upload/v1567078814/facebook_o0mfuf.png"
                       alt="@idmcalculus"/></a>
                   </span>
-                  <span class="profile"><a href="http://twitter.com/gmatngre_tutor" target="_blank">
+                  <span class="profile"><a href="http://twitter.com/idmcalculus" target="_blank">
                     <img src="https://res.cloudinary.com/idmcalculus/image/upload/v1567078815/twitter_najoia.png"
-                      alt="@gmatngre_tutor"/></a>
+                      alt="@idmcalculus"/></a>
                   </span>
                   <span class="profile"><a href="http://instagram.com/idmcalculus" target="_blank">
                     <img src="https://res.cloudinary.com/idmcalculus/image/upload/v1567078814/instagram_sg1ayt.png"
@@ -118,13 +118,9 @@
                     <div class="container">
                       <div class="skills js"></div>
                     </div>
-                    <p class="skillname">PHP</p>
+                    <p class="skillname">Angular</p>
                     <div class="container">
-                      <div class="skills php"></div>
-                    </div>
-                    <p class="skillname">Bootstrap</p>
-                    <div class="container">
-                      <div class="skills bs"></div>
+                      <div class="skills angular"></div>
                     </div>
                     <p class="skillname">OracleJET</p>
                     <div class="container">
@@ -134,10 +130,6 @@
                     <div class="container">
                       <div class="skills ko"></div>
                     </div>
-                    <p class="skillname">Project Management</p>
-                    <div class="container">
-                      <div class="skills project"></div>
-                    </div>
                     <p class="skillname">Nodejs</p>
                     <div class="container">
                       <div class="skills nodejs"></div>
@@ -146,13 +138,21 @@
                     <div class="container">
                         <div class="skills psdm"></div>
                     </div>
+                    <p class="skillname">Project Management</p>
+                    <div class="container">
+                      <div class="skills project"></div>
+                    </div>
                     <p class="skillname">React</p>
                     <div class="container">
                       <div class="skills react"></div>
                     </div>
-                    <p class="skillname">Angular</p>
+                    <p class="skillname">PHP</p>
                     <div class="container">
-                      <div class="skills angular"></div>
+                      <div class="skills php"></div>
+                    </div>
+                    <p class="skillname">Bootstrap</p>
+                    <div class="container">
+                      <div class="skills bs"></div>
                     </div>
                     <p class="skillname">Laravel</p>
                     <div class="container">
@@ -168,8 +168,16 @@
             />
           </div>
           <div class="profile-wordings">
-            <h4>PROJECT WORKS</h4>
+            <h4>PROJECTS</h4>
             <ol>
+              <li>Developed the backend architecture for Teamwork, an internal social network for employees of an organization using nodejs and postgres, deployed on Heroku <a href="https://idm-teamwork.herokuapp.com/" target="_blank">here</a>.<br> 
+                The frontend, <a href="https://idmcalculus.github.io/Teamwork-frontend/#/" target="_blank">here</a> is still under development, developed with the React framework.</li>
+              <li>Developed APIs, cloning Stack Overflow Backend architecture with Nodejs and mongoDB - <a href="https://calc-stack.herokuapp.com" target="_blank">https://calc-stack.herokuapp.com</a></li>
+              <li>Developed a simple full stack phonebook app with React, nodejs and mongoDB - <a href="https://calcbook.herokuapp.com/" target="_blank">https://calcbook.herokuapp.com/</a></li>
+              <li>Developed a basic Nodejs CRUD API for managing a store inventory <a href="https://store-inventory.herokuapp.com/" target="_blank">here</a>, using postgres.</li>
+              <li>Cloned Hacker News website's landing page with Angular by executing queries on their GraphQL API. Here's the <a href="https://github.com/idmcalculus/Hacker-News" target="_blank">GitHub link</a>.</li>
+              <li>Developed a recipe app using angular for frontend and nodejs and express for the backend. Here's the <a href="https://github.com/idmcalculus/recipes" target="_blank">Github link</a>.</li>
+              <li>Developed an interface for web payments - <a href="https://github.com/idmcalculus/TiPY" target="_blank">TiPY</a> - using plain HTML, CSS and JS</li>
               <li>Construction of Aviation Fuel Depot, NAF Base, Enugu - Project Supervisor (July, 2015)</li>
               <li>Optimum Horizontal Well Spacing - MSc Thesis (February, 2015)</li>
               <li>Multiphase Flow Regime Prediction and Pressure Gradient Computation in Vertical Oil and Gas Wells, using FORTRAN - BSc Final Year Project (October, 2010)</li>
@@ -232,31 +240,28 @@
               <hr />
               <ul>
                 <li>
-                    <p>
-                        <span class="prior" style="color: rgb(56, 109, 223);"><strong>Tutorville Resources, Hotels.ng, Edginess Corp, Andela Learning Community (ALC)</strong></span>
-                        <span><small><b> (July 2016 - Date)</b> </small></span>
-                      </p>
-                      <p>
-                        <b>Freelance Software Developer/Intern</b>    
-                        <ul>
-                            <li><a href="https://idmcalculus.github.io/Teamwork-frontend/" target="_blank">Teamwork</a>, an internal social network for employees of an organization. I used React for the frontend(hosted with GitHub pages), nodejs, express and postgresql
-                              for the backend(hosted on heroku), did TDD with Mocha and Chai, CI with Travis and Coveralls, and managed the project with GitHub Projects.</li>
-                            <li>Cloned Hacker News website's landing page with Angular by executing queries on their GraphQL API. Here's the <a href="https://github.com/idmcalculus/Hacker-News" target="_blank">GitHub link</a>.</li>
-                            <li>Developed a recipe app using angular for frontend and nodejs and express for the backend. Here's the <a href="https://github.com/idmcalculus/recipes" target="_blank">Github link</a>.</li>
-                            <li>Developed a <a href="https://idmstore-2787.firebaseapp.com/" target="_blank">mini store app</a> with angular. </li>
-                            <li>Integrated a Facebook Messenger BOT with Webview in <a href="https://know.i.ng/" target="_blank">know.i.ng</a>, an educational gaming platform for interactive learning built with Angular and NodeJS.</li>
-                            <li>Member of team that built <a href="https://dev.start.ng/" target="_blank">dev.start.ng</a>, a platform for HNG’s yearly internship, using oracleJET for the frontend and Laravel for backend.</li>
-                            <li>Member of team that developed <a href="https://nairocare.start.ng/" target="_blank">nairocare.start.ng</a> using HTML, CSS, PHP, JS and Bootstrap.</li>
-                            <li>Developed an interface for web payments - <a href="https://github.com/idmcalculus/TiPY" target="_blank">TiPY</a> - using plain HTML, CSS and JS</li>
-                            <li>Managed the team that developed <a href="https://tutorville.com.ng" target="_blank">Tutorville</a>, an online platform that links clients to tutors.</li>
-                        </ul>
-                      </p>
-                    </p>
+                  <p>
+                      <span class="prior"><strong><a href="https://versa.ng/" target="_blank">Versa Nigeria</a></strong></span>
+                      <span><small><b> (March 2020 - July 2020)</b></small></span>
+                  </p>
+                  <p>
+                    <b>Senior FullStack Developer</b>
+                    <ul>
+                      <li>Developed Front end architecture of the web app with angular</li>
+                      <li>Designed user interactions on our web pages</li>
+                      <li>Worked alongside UI/UX designers to optimally implement web design features</li>
+                      <li>Designed, developed and consumed effective APIs</li>
+                      <li>Implemented responsive web design principles to ensure company's website renders well across multiple devices</li>
+                      <li>Built reusable and maintainable codes for future use and easy reference</li>
+                      <li>Optimized web pages for maximum speed and reusability</li>
+                      <li>Worked with product team to develop new projects and product lines</li>
+                    </ul>
+                  </p>
                 </li>
                 <li>
                   <p>
                     <span class="prior"><strong><a href="https://examplanet.com/" target="_blank">Mack IV Consults, Abuja</a></strong></span>
-                    <span><small><b> (February 2017 - Date)</b> </small></span>
+                    <span><small><b> (February 2017 - February 2020)</b> </small></span>
                   </p>
                   <p>
                     <b>Mathematics/Quantitative Reasoning Tutor/Facilitator</b>
@@ -265,6 +270,19 @@
                         <li>Over 95% success rate in tests and exams clients have done, including those clients without solid Maths background.</li>
                     </ul>
                   </p>
+                </li>
+                <li>
+                    <p>
+                        <span class="prior"><strong><a href="https://hng.tech" target="_blank">HNG Tech, Remote</a></strong></span>
+                        <span><small><b> (August 2019 - November 2019)</b> </small></span>
+                    </p>
+                    <p>
+                      <b>Intern Software Engineer</b>    
+                      <ul>
+                          <li>Developed a web app, <a href="https://manager.hng.tech/" target="_blank">HNG Board</a>, as part of a team, using OracleJET for the frontend and Laravel for the backend.</li>
+                          <li>Built a slackbot with Nodejs and Express as part of deliverables for my team in stage 4 of the internship.</li>
+                      </ul>
+                    </p>
                 </li>
                 <li>
                   <p>
@@ -325,8 +343,8 @@
                     <li>M.Sc Petroleum Engineering, <a href="http://www.ui.edu.ng/" target="_blank">University of Ibadan</a> <small><b>(2015)</b></small></li>
                     <li>B.Sc Petroleum Engineering, <a href="http://www.ui.edu.ng/" target="_blank">University of Ibadan</a>
                         (Second Class Honours Upper Division) <small><b>(2010)</b></small></li>
-                    <li>Loyola College, Ibadan. Senior School Certificate Examination(SSCE) (2003)</li>
-                    <li>Olumide Day N/P School, Ibadan. Primary School Leaving Certificate (1997)</li>
+                    <li>Loyola College, Ibadan. Senior School Certificate Examination(SSCE) <small><b>(2003)</b></small></li>
+                    <li>Olumide Day N/P School, Ibadan. Primary School Leaving Certificate <small><b>(1997)</b></small></li>
                 </p>
               </ul>
             </div>
@@ -382,12 +400,29 @@
                     <li>Quiz Coordinator, Junior Engineers Technicians and Scientists’ (JETS) 
                         Club, Loyola College, Ibadan (2002/2003 session).</li>
                     <li>One (1) of four (4) pupils that represented Oyo State at the National JETS
-                        Competition held in Umuahia, Abia State in December, 2002 where I came 
+                        Competition held in Umuahia, Abia State in December, 2002 <br> where I came 
                         fourth(4th) overall in Agricultural Science and sixth(6th) overall in Chemistry.</li>
                     <li>1st Prize Winner, Oyo State Mathematical Olympiad conducted by the
                         Mathematical Association of Nigeria (MAN) in February, 2002.</li>
                     <li>Award of Merit, National Competitive Examination in Mathematics conducted by the 
                         National Mathematical Centre in June, 1997.</li>
+                </ol>
+            </div>
+            <div class="experience-img">
+                <img
+                  src="https://res.cloudinary.com/idmcalculus/image/upload/v1567078815/police_axsdag.png"
+                  alt="icon"
+                />
+            </div>
+            <div class="experience">
+                <h4>VOLUNTEERISM</h4>
+                <hr />
+                <ol>
+                    <li>Mobile Web Specialist Mentor at Andela Learning Community (ALC) 4.0 <small><b>(June 2020 - Date)</b></small></li>
+                    <li>Mentor at HNG internship 7 (HNGi7) by <a href="https://hng.tech/" target="_blank">hng.tech </a><small><b>(June 2020 - Date)</b></small></li>
+                    <li>Nodejs Mentor at <a href="https://start.ng/" target="_blank">start.ng </a><small><b>(March 2020 - May 2020)</b></small></li>
+                    <li>Teenage Mentor at <a href="https://saltandlight.ng/" target="_blank">OliveTenders </a><small><b>(July 2012 - Date)</b></small></li>
+                    <li>Abuja Coordinator, Listening Lizzy <small><b>(2017 - 2019)</b></small></li>
                 </ol>
             </div>
           </div>
